Update Fixture endpoint
